--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
 <form action="/shorten" method="post" >
     <label for="orig_url"> URL to shorten </label>
     <input type=url label="url to shorten" id="orig_url" name="orig_url">
-    <button type="submit">Shorten this url for me</button>
+    <button type="submit">Shorten</button>
     </input>
 </form>
 </head>
