--- a/chrome_ext/popup.html
+++ b/chrome_ext/popup.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>UrlShorten's Popup</title>
     <style>
       body {
         min-width: 357px;
@@ -23,7 +23,6 @@
       -
       - [1]: http://developer.chrome.com/extensions/contentSecurityPolicy.html
      -->
-    <script src="popup.js"></script>
   </head>
   <body>
   </body>
