--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 
 <head>
 <meta name="google-site-verification" content="8FHyn_C58Vv6WmuCrfI_LhKWr_2FMBFAVxDdgodjm1I" />
-    <form action="/shorten" method="post" >
+    <form action="/url/shorten" method="post" >
         <label for="orig_url"> URL to shorten </label>
         <input type=url label="url to shorten" id="orig_url" name="orig_url">
         <button type="submit">Shorten</button>
