--- a/static/index.html
+++ b/static/index.html
@@ -7,18 +7,25 @@
         <button type="submit">Shorten</button>
         </input>
     </form>
-    <pre>
+
+    <form method="get" id="stats">
     <b>Stats:</b>
-    Urls Shortened:
-    Redirect Counts:
-    </pre>
+    <label for = "urls"> Urls Shortened:</label>
+    <input type=text label="Urls Shortened:" id="urls" name="urls" >
+    <label for = "redirects"> Redirect Counts:</label>
+    <input type=text label="Redirect Counts:" id="redirects" name="redirects" value= "" >
+    </form>
     <script>
         $(document).ready(function() {
-            var stats = $.parseJSON($.ajax({
-                type: "GET",
-                url: "/url/stats",
-                }).responseText);
-            console.log(stats);
+            var xmlHttp = null;
+            xmlHttp = new XMLHttpRequest();
+            xmlHttp.open( "GET", "/url/stats", false );
+            xmlHttp.send( null );
+            var stats = $.parseJSON(xmlHttp.responseText);
+            $('#urls').value=stats.urls.toString();
+            $('#urls').readOnly = true;
+            $('#redirects').value=stats.redirects.toString();
+            $('#redirects').readOnly = true;
             });
 
     </script>
