--- a/static/index.html
+++ b/static/index.html
@@ -9,11 +9,13 @@
     </form>
 
     <form method="get" id="stats">
+    <pre>
     <b>Stats:</b>
     <label for = "urls"> Urls Shortened:</label>
     <input type=text label="Urls Shortened:" id="urls" name="urls" readOnly>
     <label for = "redirects"> Redirect Counts:</label>
     <input type=text label="Redirect Counts:" id="redirects" name="redirects" readOnly >
+    </pre>
     </form>
     <script>
         $(document).ready(function() {
