--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <head>
 <meta name="google-site-verification" content="8FHyn_C58Vv6WmuCrfI_LhKWr_2FMBFAVxDdgodjm1I" />
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <form action="/url/shorten" method="post" id="shorten">
+    <form action="/shorten" method="post" id="shorten">
         <label for="orig_url"> URL to shorten </label>
         <input type=url label="url to shorten" id="orig_url" name="orig_url">
         <button type="submit">Shorten</button>
@@ -24,7 +24,7 @@
         $(document).ready(function() {
             var xmlHttp = null;
             xmlHttp = new XMLHttpRequest();
-            xmlHttp.open( "GET", "/url/stats", false );
+            xmlHttp.open( "GET", "/stats", false );
             xmlHttp.send( null );
             var stats = $.parseJSON(xmlHttp.responseText);
             $('#urls').val(stats.urls.toString());
