--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,8 @@
 <head>
 <meta name="google-site-verification" content="8FHyn_C58Vv6WmuCrfI_LhKWr_2FMBFAVxDdgodjm1I" />
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+</head>
+<body>
     <form action="/shorten" method="post" id="shorten">
         <label for="orig_url"> URL to shorten </label>
         <input type=url label="url to shorten" id="orig_url" name="orig_url">
@@ -17,6 +19,7 @@
     <input type=text label="Redirect Counts:" id="redirects" name="redirects" readOnly >
     </pre>
     </form>
+
 <a href="https://github.com/emofeedback/urlshortener">
     <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png">
 </a>
@@ -34,5 +37,7 @@
             });
 
     </script>
-</head>
+</body>
+<footer>
+    <p> A blog post about this project can be found <a href="http://www.anandjeyahar.net/urlshortener-in-python/"> here. </a>
 
